Fri Jun  5 14:48:06 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/arch/ccm/CCM_Servant_T.h:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant.h:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant.inl:

          . Derived the CUTS_TCPIP_CCM_Servant class from the
            CUTS_CCM_Servant class since it contains the required
            methods/properties for all CCM servants that integrate
            with the container.

Fri Jun  5 13:56:31 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Servant_Header_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Servant_Header_Impl_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Servant_Source_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Servant_Source_Impl_Generator.cpp:

          . Updated the code generator to support the design/implementation
            of the TCP/IP servants.

Fri Jun  5 13:52:25 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/arch/ccm/CCM_Servant_T.h:
        * cuts/arch/ccm/CCM_Servant_T.inl:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant_T.h:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant_T.inl:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant_T.cpp:
        * examples/arch/tcpip/HelloWorld/TCPIP_HelloWorld_svnt.cpp:

          . The servant no longer needs to pass a pointer to itself to
            the CUTS_CCM_Servant_T base class.

Fri Jun  5 07:30:34 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/arch/ccm/CCM_ComponentServer_T.cpp:
        * cuts/arch/tcpip/TCPIP_Servant_VTable_T.h:
        * examples/arch/tcpip/HelloWorld/HelloWorld_Impl.mpc:
        * examples/arch/tcpip/HelloWorld/TCPIP_HelloWorld_svnt.h:

          . Fixed build errors on non-Windows systems.

Fri Jun  5 07:14:28 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>
