@@ -4,9 +4,19 @@
 //
 // ~CUTS_CCM_Container_T
 //
-template <typename CONTAINER, typename STRATEGY, typename SERVANT_BASE>
+template <typename T, typename SERVER, typename STRATEGY, typename SERVANT_BASE>
 CUTS_INLINE
-CUTS_CCM_Container_T <CONTAINER, STRATEGY, SERVANT_BASE>::~CUTS_CCM_Container_T (void)
+CUTS_CCM_Container_T <T, SERVER, STRATEGY, SERVANT_BASE>::~CUTS_CCM_Container_T (void)
 {
 
+}
+
+//
+// ~CUTS_CCM_Container_T
+//
+template <typename T, typename SERVER, typename STRATEGY, typename SERVANT_BASE>
+CUTS_INLINE
+SERVER * CUTS_CCM_Container_T <T, SERVER, STRATEGY, SERVANT_BASE>::server (void)
+{
+  return this->server_;
 }
